--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>¡nos vamos a casar!</p>
     <img src="images/Principal.svg" alt="" class="principal">
     <section id="invitacion">
-        <p class="top">Te invitamos a celebrar con nosotros nuestra boda.</p>
+        <p class="top">Te invitamos a celebrar nuestra boda.</p>
         <img src="images/Círculos.png" alt="">
         <p class="bottom">Será una ceremonia civil íntima, seguida de una comida para celebrar juntos.</p>
     </section>
